CMAKE_MINIMUM_REQUIRED(VERSION 2.8.10)

PROJECT(openssl-cplueplus-demo CXX)

IF(WIN32)
    # CMAKE_INSTALL_PREFIX default to c:/Program Files on Windows.
    # Use default CMAKE_INSTALL_PREFIX
ELSE()
    # CMAKE_INSTALL_PREFIX default to /usr/local on UNIX.
    SET(CMAKE_INSTALL_PREFIX /usr/local/openssl-cplueplus-demo)
    SET(CMAKE_INSTALL_RPATH /usr/local/openssl-cplueplus-demo/bin)
ENDIF()

SET(OUTPUT_DIR ${CMAKE_BINARY_DIR}/bin)

# 由于单元测试需要，所有库和执行文件全部生成到目录 bin
IF(WIN32)
    SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${OUTPUT_DIR})
    SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${OUTPUT_DIR})
    SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_MINSIZEREL ${OUTPUT_DIR})
    SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELWITHDEBINFO ${OUTPUT_DIR})

    SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG ${OUTPUT_DIR})
    SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${OUTPUT_DIR})
    SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY_MINSIZEREL ${OUTPUT_DIR})
    SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELWITHDEBINFO ${OUTPUT_DIR})

    SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${OUTPUT_DIR})
    SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${OUTPUT_DIR})
    SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_MINSIZEREL ${OUTPUT_DIR})
    SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO ${OUTPUT_DIR})
ELSE()
    SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${OUTPUT_DIR})
    SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${OUTPUT_DIR})
    SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${OUTPUT_DIR})
ENDIF()

    # find gtest
    FIND_PACKAGE(GTest REQUIRED)
    INCLUDE_DIRECTORIES(${GTEST_INCLUDE_DIRS})

    # 解决 GTest 编译报错：“std::tuple”: 模板 参数太多
    IF(MSVC)
    ADD_DEFINITIONS("-D_VARIADIC_MAX=10")
    ENDIF()

    ENABLE_TESTING()
    ADD_SUBDIRECTORY(test)
